# SimpleUNOComponent

./: .gitignore  CMakeLists.txt  Makefile  README.md  SimpleComponent.ods  SimpleComponent.odt  SimpleComponent.oxt  TestSimpleComponent.cxx  makefile  service1_impl.cxx  service2_impl.cxx  some.idl
